<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="fill_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_height="wrap_content">
    <com.balysv.materialripple.MaterialRippleLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:mrl_rippleOverlay="false"
        app:mrl_rippleDelayClick="true"
        app:mrl_rippleColor="#585858"
        app:mrl_rippleAlpha="0.2"
        app:mrl_rippleHover="true">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:baselineAligned="false">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_complany"
            android:id="@+id/tv_complany"
            android:textSize="18sp"
            android:layout_centerVertical="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_name"
            android:id="@+id/tv_name"
            android:textColor="@color/teal"
            android:textSize="16sp"
            android:layout_toRightOf="@+id/tv_complany"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_status"
            android:id="@+id/tv_status"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/tv_name"
            android:layout_centerVertical="true" />

        <ImageButton
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/img_more"
            android:background="@color/transparent"
            android:src="@drawable/add"
            android:scaleType="fitXY"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="10dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/tv_remark" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rl2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/imageView10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_DepAirport"
                android:id="@+id/tv_DepAirport"
                android:textSize="20sp"
                android:layout_alignParentLeft="false"
                android:layout_alignParentRight="false"
                android:layout_alignParentTop="false"
                android:layout_alignParentBottom="false"
                android:layout_alignWithParentIfMissing="false"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_DepTime"
                android:textColor="@color/teal"
                android:textSize="18sp"
                android:layout_below="@+id/tv_DepAirport"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp" />
        </RelativeLayout>

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:id="@+id/imageView10"
            android:src="@drawable/swap_flight"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/imageView10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_ArrTime"
                android:textColor="@color/teal"
                android:textSize="18sp"
                android:layout_below="@+id/tv_ArrAirport"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_ArrAirport"
                android:id="@+id/tv_ArrAirport"
                android:textSize="20sp"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rl3"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:layout_margin="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ti_Dexpected"
                android:id="@+id/ti_Dexpected" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_Dexpected"
                android:textColor="@color/teal"
                android:layout_toRightOf="@+id/ti_Dexpected" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ti_Dactual"
                android:id="@+id/ti_Dactual"
                android:layout_below="@+id/ti_Dexpected" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_Dactual"
                android:layout_below="@+id/tv_Dexpected"
                android:textColor="@color/teal"
                android:layout_toRightOf="@+id/ti_Dactual" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:gravity="center_vertical|center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ti_Aexpected"
                android:id="@+id/ti_Aexpected"
                android:layout_below="@+id/ti_Dexpected" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_Aexpected"
                android:layout_below="@+id/tv_Dexpected"
                android:textColor="@color/teal"
                android:layout_toRightOf="@+id/ti_Aexpected" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ti_Aactual"
                android:id="@+id/ti_Aactual"
                android:layout_below="@+id/ti_Aexpected" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_Aactual"
                android:layout_below="@+id/tv_Aexpected"
                android:textColor="@color/teal"
                android:layout_toRightOf="@+id/ti_Aactual" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
    </com.balysv.materialripple.MaterialRippleLayout>
</android.support.v7.widget.CardView>