<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="fill_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_height="wrap_content">
    <com.balysv.materialripple.MaterialRippleLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:mrl_rippleOverlay="false"
        app:mrl_rippleDelayClick="true"
        app:mrl_rippleColor="#585858"
        app:mrl_rippleAlpha="0.2"
        app:mrl_rippleHover="true">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
>

        <ImageButton
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/img_more"
            android:src="@drawable/add"
            android:background="@color/transparent"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:scaleType="fitXY"
            android:layout_marginTop="3dp" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rl1"
                android:layout_toLeftOf="@+id/rl2"
                android:layout_centerVertical="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_train_no"
                    android:id="@+id/tv_train_no"
                    android:textColor="@color/teal"
                    android:textSize="16sp"
                    android:layout_marginBottom="5dp"
                    android:layout_centerHorizontal="true" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rl2"
                android:layout_centerInParent="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_start_time"
                    android:id="@+id/tv_check_time"
                    android:textColor="@color/teal"
                    android:textSize="16sp"
                    android:layout_toRightOf="@+id/split" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_arrive_time"
                    android:id="@+id/tv_stop_time"
                    android:textColor="@color/teal"
                    android:textSize="16sp"
                    android:layout_below="@+id/tv_check_time"
                    android:layout_toRightOf="@+id/split2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/split"

                    android:text="@string/ti_split"
                    android:layout_toRightOf="@+id/tv_from_station_name"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/split2"
                    android:layout_below="@+id/split"
                    android:text="@string/ti_split"
                    android:layout_toRightOf="@+id/tv_to_station_name"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="开始检票"
                    android:id="@+id/tv_from_station_name"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="停止检票"
                    android:id="@+id/tv_to_station_name"
                    android:textSize="16sp"
                    android:layout_below="@+id/tv_from_station_name" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rl3"
                android:layout_alignParentRight="false"
                android:layout_toRightOf="@+id/rl2"
                android:layout_centerVertical="true"
                android:gravity="center_vertical|center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="正点"
                    android:id="@+id/tv_status" />
            </RelativeLayout>
        </RelativeLayout>

    </RelativeLayout>
    </com.balysv.materialripple.MaterialRippleLayout>
</android.support.v7.widget.CardView>
